started reservation page

--- a/destinations.html
+++ b/destinations.html
@@ -8,6 +8,9 @@
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.min.js"></script>
 		<script type="text/javascript" src="scripts/map.js"></script>
 		<link href='http://fonts.googleapis.com/css?family=Share' rel='stylesheet' type='text/css'>
+		<!--[if lt IE 9]>
+		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
 	</head>
 	<body>
 		<div class="wrapper">
@@ -92,27 +95,27 @@
 							<h2>Airports</h2>
 							<h3>Orlando International</h3>
 							<p>
-								Info about the airport. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam congue, nisl eu viverra fringilla, velit lectus accumsan dui, a vehicula metus ipsum ut quam. Nunc mattis malesuada diam, at condimentum dui tempus a.
+								Orlando International is located in the business district of Orlando and is considered the second busiest airport in Florida, behind Miami International Airport. Orlando Int'l is a focus city for Southwest Airlines and JetBlue Airways.
 							</p>
 						</div>
 					</div>
 					<div class="destination_detail" id="orlando_sanford">
-						<img class="destination_photo" src="images/destinations/airport.jpg" alt="orlando sanford" />
+						<img class="destination_photo" src="images/destinations/propeller.jpg" alt="orlando sanford" />
 						<div class="destination_info">
 							<h2>Airports</h2>
 							<h3>Orlando Sanford</h3>
 							<p>
-								Pellentesque nibh felis, eleifend id, commodo in, interdum vitae, leo. Praesent eu elit. Ut eu ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos commodo in interdum vitae leo.
+								Orlando Sanford International Airport sits on approximately 2000 acres, located in Seminole County, Florida. It has four runways and serves many regional and international carriers. Aerosim Flight Academy calls the airport home. 
 							</p>
 						</div>
 					</div>
 					<div class="destination_detail" id="orlando_executive">
-						<img class="destination_photo" src="images/destinations/airport.jpg" alt="orlando executive" />
+						<img class="destination_photo" src="images/destinations/plane_landing.jpg" alt="orlando executive" />
 						<div class="destination_info">
 							<h2>Airports</h2>
 							<h3>Orlando Executive</h3>
 							<p>
-								Pellentesque nibh felis, eleifend id, commodo in, interdum vitae, leo. Praesent eu elit. Ut eu ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos commodo in interdum vitae leo.
+								Orlando Executive is located in Orange County, Florida on 1055 acres, has two runways and serves many private businesses in the area. The airport is often used as the landing site for Marine One during Presidential visits.
 							</p>
 						</div>
 					</div>
@@ -122,9 +125,9 @@
 						<img class="destination_photo" src="images/destinations/disneyworld.jpg" alt="disney world" />
 						<div class="destination_info">
 							<h2>Attractions</h2>
-							<h3>Disney World</h3>
+							<h3>Epcot<br />Disney World</h3>
 							<p>
-								Pellentesque nibh felis, eleifend id, commodo in, interdum vitae, leo. Praesent eu elit. Ut eu ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos commodo in interdum vitae leo.
+								Located near Orlando, Epcot is a theme park in the Walt Disney World Resort. The name Epoct comes from an acronym for a utopian city conceptualized by Walt Disney called the Experimental Prototype Community of Tomorrow. Epcot is the 5th most-visited theme park in the world.
 							</p>
 						</div>
 					</div>
@@ -132,9 +135,9 @@
 						<img class="destination_photo" src="images/destinations/universal_studios.jpg" alt="universal studios" />
 						<div class="destination_info">
 							<h2>Attractions</h2>
-							<h3>Universal Studios</h3>
+							<h3>Universal Orlando Resort</h3>
 							<p>
-								Pellentesque nibh felis, eleifend id, commodo in, interdum vitae, leo. Praesent eu elit. Ut eu ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos hymenaeos commodo in interdum vitae leo.
+								A popular destination for entertainment, Universal Orlando Resort is a theme park resort located in Orlando, Florida. The resort consists of Universal Studios Florida, Islands of Adventure, and Universal CityWalk along with multiple hotels. 
 							</p>
 						</div>
 					</div>
@@ -144,7 +147,7 @@
 							<h2>Attractions</h2>
 							<h3>Orlando Science Center</h3>
 							<p>
-								Info about the airport. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam congue, nisl eu viverra fringilla, velit lectus accumsan dui, a vehicula metus ipsum ut quam. Nunc mattis malesuada diam, at condimentum dui tempus a.
+								The Orlando Science Center is a popular attraction in Central Florida. The Science Center has four floors of exhibits, an observatory, and a domed theater for planetarium shows. Educational and great fun for all ages!
 							</p>
 						</div>
 					</div>
@@ -156,7 +159,7 @@
 							<h2>Convention Centers</h2>
 							<h3>Orange County Convention Center</h3>
 							<p>
-								Info about the Orange County Convention Center. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam congue, nisl eu viverra fringilla, velit lectus accumsan dui, a vehicula metus ipsum ut quam. Nunc mattis malesuada diam, at condimentum dui tempus a.
+								The OCCC is known as the primier convention center for Central Florida. It is the second largest convention center in the United States, behind McCormick Place in Chicago, Illinois. The convention center boasts of over 2 million square feet of exhibition space!
 							</p>
 						</div>
 					</div>
@@ -166,7 +169,7 @@
 							<h2>Convention Centers</h2>
 							<h3>The Peabody Hotel</h3>
 							<p>
-								Info about the The Peabody Hotel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam congue, nisl eu viverra fringilla, velit lectus accumsan dui, a vehicula metus ipsum ut quam. Nunc mattis malesuada diam, at condimentum dui tempus a.
+								The Peabody Hotel is situated near the Orange County Convention Center. The hotel is 31 stories tall, contains over 1600 rooms and is the second tallest building in Orlando. 
 							</p>
 						</div>
 					</div>
@@ -176,7 +179,7 @@
 							<h2>Convention Centers</h2>
 							<h3>Orlando World Center Marriott</h3>
 							<p>
-								Info about the The Peabody Hotel. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam congue, nisl eu viverra fringilla, velit lectus accumsan dui, a vehicula metus ipsum ut quam. Nunc mattis malesuada diam, at condimentum dui tempus a.
+								The 28 story Marriott hotel is the largest Marriott in the world. With access to a golf course, a large ballroom, six swimming pools and 10 restaurants and lounges, it is a great place for business meetings or vacationing.
 							</p>
 						</div>
 					</div>
@@ -188,7 +191,7 @@
 							<h2>Ports</h2>
 							<h3>Port Canaveral</h3>
 							<p>
-								Info about the Port Canaveral, Florida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam congue, nisl eu viverra fringilla, velit lectus accumsan dui, a vehicula metus ipsum ut quam. Nunc mattis malesuada diam, at condimentum dui tempus a.
+								One of the busiest ports in the world, Port Canaveral, located on the eastern coast of Florida, is used by cruise and cargo ships. The port contains six cruise terminals and is the home port for ships from Disney Cruise Lines, Carnival Cruise Lines and Royal Caribbean.
 							</p>
 						</div>
 					</div>
@@ -196,9 +199,10 @@
 						<img class="destination_photo" src="images/destinations/port_tampa.jpg" alt="port tampa" />
 						<div class="destination_info">
 							<h2>Ports</h2>
-							<h3>Port Tampa</h3>
+							<h3>Port of Tampa</h3>
 							<p>
-								Info about the Port Canaveral, Florida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam congue, nisl eu viverra fringilla, velit lectus accumsan dui, a vehicula metus ipsum ut quam. Nunc mattis malesuada diam, at condimentum dui tempus a.
+								The port of Tampa is the largest port in Florida, located on the western coast of the state. The port is one of the most popular points of embarkation for Caribbean cruises and is home to cruise terminals for Carnival Cruise Line, Royal Caribbean Int'l, Holland America Line and Norwegian Cruise Line.
+
 							</p>
 						</div>
 					</div>
@@ -208,7 +212,7 @@
 							<h2>Ports</h2>
 							<h3>Port Manatee</h3>
 							<p>
-								Info about the Port Canaveral, Florida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam congue, nisl eu viverra fringilla, velit lectus accumsan dui, a vehicula metus ipsum ut quam. Nunc mattis malesuada diam, at condimentum dui tempus a.
+								Port Manatee is one of the largest deepwater seaport in Florida and is served by mostly cargo ships. The port is 1100 acres in size and moves about 9 million tons of cargo per year.
 							</p>
 						</div>
 					</div>
@@ -218,9 +222,9 @@
 						<img class="destination_photo" src="images/destinations/amway_arena.jpg" alt="amway arena" />
 						<div class="destination_info">
 							<h2>Arenas</h2>
-							<h3>Amway Arena</h3>
+							<h3>Amway Center</h3>
 							<p>
-								Info about the Amway Arena, Florida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam congue, nisl eu viverra fringilla, velit lectus accumsan dui, a vehicula metus ipsum ut quam. Nunc mattis malesuada diam, at condimentum dui tempus a.
+								The Amway Center is located in Downtown Orlando, and home to sports teams like the Orlando Magic and the Orlando Predators. The venue is also used to host concerts and events.
 							</p>
 						</div>
 					</div>
@@ -230,7 +234,7 @@
 							<h2>Arenas</h2>
 							<h3>Kissimmee Sports Arena</h3>
 							<p>
-								Info about the Kissimmee Sports Arena, Florida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam congue, nisl eu viverra fringilla, velit lectus accumsan dui, a vehicula metus ipsum ut quam. Nunc mattis malesuada diam, at condimentum dui tempus a.
+								Kissimmee Sports Arena hosts the Monthly Saturday Rodeo, and other exciting events. The Banquet Hall has a 3200 square foot lounge available for special occasions, weddings, family or class reunions and conventions.
 							</p>
 						</div>
 					</div>
@@ -240,7 +244,7 @@
 							<h2>Arenas</h2>
 							<h3>Silver Spurs Arena</h3>
 							<p>
-								Info about the Port Canaveral, Florida. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam congue, nisl eu viverra fringilla, velit lectus accumsan dui, a vehicula metus ipsum ut quam. Nunc mattis malesuada diam, at condimentum dui tempus a.
+								Located in the Osceola Heritage Park entertainment complex, Silver Spurs Arena is an 8000 seat venue and home to the Silver Spurs Rodeo. 
 							</p>
 						</div>
 					</div><!-- end arenas -->
@@ -249,27 +253,27 @@
 			<br class="clearfix"/>
 			<section id="service_descriptions">
 				<div class="service_subsection_secondary">
-					<h3>Punctual</h3>
+					<h3>Taxi</h3>
 					<p>
-						Most travel time is under 30 minutes in duration.
+						Taxis can hold up to 4 passengers and are ideal transportation for trips to an airport, hotel or to a sports arena.
 					</p>
 				</div>
 				<div class="service_subsection_secondary divider">
-					<h3>Professional</h3>
+					<h3>Sport Utility</h3>
 					<p>
-						Our chauffeurs and service representatives are courteous and ready to help.
+						SUVs can hold up to 7 passengers and are great for trips to many of Central Florida's theme parks and attractions.
 					</p>
 				</div>
 				<div class="service_subsection_secondary divider">
-					<h3>Luxurious</h3>
+					<h3>Sedan</h3>
 					<p>
-						All of our vehicles are nicely equipped, clean and include radios and GPS tracking.
+						Sedans can hold up to 4 passengers in comfort and style while traveling to places like the airport, convention center or a hotel.
 					</p>
 				</div>
 				<div class="service_subsection_secondary divider">
-					<h3>Need a Quote?</h3>
+					<h3>Limousine</h3>
 					<p>
-						Call our friendly customer service staff at <strong>407-855-4600</strong>!
+						Limousines can hold up to 10 passengers and are ideal for any special occasion, like a wedding, or a night on the town.
 					</p>
 				</div>
 			</section>
