--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.min.js"></script>
 		<script type="text/javascript" src="scripts/jquery.imgpreload.min.js"></script>
 		<script type="text/javascript" src="scripts/marquee.js"></script>
+		<script type="text/javascript" src="scripts/modernizr-2.5.3.js"></script>
+		<!--[if lt IE 9]>
+		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
 	</head>
 	<body>
 		<div class="wrapper">
