additional changes to css and html

--- a/destinations.html
+++ b/destinations.html
@@ -250,7 +250,7 @@
 				</div><!--end content -->
 			</div><!-- end wrapper -->
 			<br class="clearfix"/>
-			<section id="service_descriptions">
+			<section class="section_seperator" id="service_descriptions">
 				<div class="service_subsection_secondary">
 					<h3>Taxi</h3>
 					<p>
