--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<p>content seperator</p>
 					</div>
 					<br class="clearfix" />
-					<section>
+					<section class="section_seperator">
 						<div class="service_subsection">
 						<div class="sub_section_img_container"><img src="images/photos/bridelimo.jpg"></div>
 						<h3>The Bride's Ride</h3>
@@ -118,7 +118,7 @@
 						</aside>
 					</section>
 					<br class="clearfix"/>
-					<section id="service_descriptions">
+					<section class="section_seperator" id="service_descriptions">
 						<div class="service_subsection_secondary">
 							<h3>Punctual</h3>
 							<p>Most travel time is under 30 minutes in duration.</p>
