--- a/vehicles.html
+++ b/vehicles.html
@@ -28,11 +28,8 @@
 	</div>
 </header>
 <div id="content">
-<h1>This is the body...</h1>
+<h1>Work in progress....</h1>
 
-<div id="content_sep">
-	<p>separator line</p>
-</div>
 </div><!--end content -->
 </div><!-- end wrapper -->
 <footer>
