--- a/rates.html
+++ b/rates.html
@@ -28,11 +28,7 @@
 	</div>
 </header>
 <div id="content">
-<h1>This is the body...</h1>
-
-<div id="content_sep">
-	<p>separator line</p>
-</div>
+<h1>Work in progress....</h1>
 </div><!--end content -->
 </div><!-- end wrapper -->
 <footer>
