--- a/reservations.html
+++ b/reservations.html
@@ -67,7 +67,7 @@
 							</p>
 							<h3>Contact</h3>
 							<p>Do you have a question or comment for us? <br />
-								Please contact us anytime! <a href="<a mailto:example@example.com?subject=feedback">Contact Form</a>
+								Please contact us anytime! <a href="#">Contact Form</a>
 							</p>
 						</div>
 					</section>
