add'l changes to css

--- a/index.html
+++ b/index.html
@@ -104,12 +104,12 @@
 						<div class="service_subsection">
 						<div class="sub_section_img_container"><img src="images/photos/bridelimo.jpg"></div>
 						<h3>The Bride's Ride</h3>
-						<p>We understand how hectic planning a wedding can be. With all the guests to invite, facilities to reserve and dress shopping to do, who wants to worry about a ride? Book our worry-free <strong>Chauffeured Limousine</strong> service and arrive for your big day in luxurious style!</p>
+						<p>We understand how hectic planning a wedding can be. With all the guests to invite, facilities to reserve and dress shopping to do, who wants to worry about a ride? Book our worry-free <a href="services.html">Chauffeured Limousine</a> service and arrive for your big day in luxurious style!</p>
 						</div>
 						<div class="service_subsection">
 							<div class="sub_section_img_container"><img src="images/photos/partybus.jpg"></div>
 						<h3>Party On Wheels</h3>
-						<p>Did someone say <strong>"Party Bus"</strong>? A Party Bus is the most fun you can have on wheels. Built for entertainment and comfort, our busses are packed with large flatscreen TVs, sound-systems, and all the amenities you could want for your party-in-motion.</p>							
+						<p>Did someone say <strong>"Party Bus"</strong>? A <a href="vehicles.html">Party Bus</a> is the most fun you can have on wheels. Built for entertainment and comfort, our busses are packed with large flatscreen TVs, sound-systems, and all the amenities you could want for your party-in-motion.</p>							
 						</div>
 						<aside id="special_offers">
 							<h3>Special Offers</h3>
