--- a/reservations.html
+++ b/reservations.html
@@ -154,7 +154,27 @@
 					</section>
 				</div>
 				</div>
-								</div>
+								<br class="clearfix"/>
+					<section class="section_seperator" id="service_descriptions">
+						<div class="service_subsection_secondary">
+							<h3>Punctual</h3>
+							<p>Most travel time is under 30 minutes in duration.</p>
+						</div>
+						<div class="service_subsection_secondary divider">
+							<h3>Professional</h3>
+							<p>Our chauffeurs and service representatives are courteous and ready to help.</p>
+						</div>
+						<div class="service_subsection_secondary divider">
+							<h3>Luxurious</h3>
+							<p>All of our vehicles are nicely equipped, clean and include radios and GPS tracking.</p>
+						</div>
+						<div class="service_subsection_secondary divider">
+							<h3>Need a Quote?</h3>
+							<p>Call our friendly customer service staff at <strong>407-855-4600</strong>!</p>
+						</div>
+					</section>
+								
+					</div><!-- end container -->
 		
 		
 		<!-- end wrapper -->
