--- a/destinations.html
+++ b/destinations.html
@@ -254,7 +254,7 @@
 				<div class="service_subsection_secondary">
 					<h3>Taxi</h3>
 					<p>
-						Taxis can hold up to 4 passengers and are ideal transportation for trips to an airport, hotel or to a sports arena.
+						Taxis can hold up to 4 passengers and are ideal transportation for trips to an airport, hotel, a sports arena or a night club.
 					</p>
 				</div>
 				<div class="service_subsection_secondary divider">
