--- a/destinations.html
+++ b/destinations.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset='utf-8'>
-		<title>Destinations File</title>
+		<title>Destinations</title>
 		<link rel="stylesheet" href="css/main.css" />
 		<link rel="stylesheet" type="text/css" href="css/map.css" />
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.min.js"></script>
