--- a/rates.html
+++ b/rates.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset='utf-8'>
-<title>Rates File</title>
+<title>Rates</title>
 <link rel="stylesheet" href="css/main.css" />
 <link href='http://fonts.googleapis.com/css?family=Share' rel='stylesheet' type='text/css'>
 
