--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset='utf-8'>
 		<title>Home</title>
+		<meta charset='utf-8'>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link rel="stylesheet" href="css/main.css" />
-		<link rel="stylesheet" href="css/marquee.css" />
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.min.js"></script>
 		<script type="text/javascript" src="scripts/jquery.imgpreload.min.js"></script>
 		<script type="text/javascript" src="scripts/marquee.js"></script>
-		<script type="text/javascript" src="scripts/modernizr-2.5.3.js"></script>
 		<!--[if lt IE 9]>
 		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -121,7 +120,7 @@
 					<section class="section_seperator" id="service_descriptions">
 						<div class="service_subsection_secondary">
 							<h3>Punctual</h3>
-							<p>Most travel time is under 30 minutes in duration.</p>
+							<p>Most travel time is concluded in under 30 minutes, start to finish, door to door.</p>
 						</div>
 						<div class="service_subsection_secondary divider">
 							<h3>Professional</h3>
@@ -133,7 +132,7 @@
 						</div>
 						<div class="service_subsection_secondary divider">
 							<h3>Need a Quote?</h3>
-							<p>Call our friendly customer service staff at <strong>407-855-4600</strong>!</p>
+							<p>Just call our friendly customer service staff waiting to talk to you. <strong>407-855-4600</strong></p>
 						</div>
 					</section>
 				</div><!--end container -->
