--- a/services.html
+++ b/services.html
@@ -5,8 +5,9 @@
 <title>Services</title>
 <link rel="stylesheet" href="css/main.css" />
 <link rel="stylesheet" href="css/services.css" />
-<link href='http://fonts.googleapis.com/css?family=Share' rel='stylesheet' type='text/css'>
-
+<!--[if lt IE 9]>
+<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 
 </head>
 <body>
@@ -28,13 +29,13 @@
 	<a id="logo" href="index.html"><img src="images/logo.png" /></a>
 	</div>
 </header>
-<div id="services_page_content">
+<div id="services_vehicles_page_content">
 <br class="clearfix" />
 	<div id="content_sep">
 	<!-- <p>separator line</p> -->
  </div>
-<div class="service_container">
-	<div class="services_page_img_container">
+<div class="services_vehicles_container">
+	<div class="services_vehicles_page_img_container">
 	<img src="images/photos/vehicles/van_shuttle.jpg" /></div>
 	<h3>Airport Shuttle</h3>
 	<ul>
@@ -42,22 +43,22 @@
 		<li>Large luggage space</li>
 		<li>Clean, comfortable interior</li>
 	</ul>
-	<p>Airport transportation is one of Orlando Tropical Transport's primary services. We offer shuttle transportation to and from Orlando International, Orlando Sanford and Orlando Executive airport. Our shuttles will pick you up from your home, hotel or office and get you to the airport on time and hassle-free, all for a low rate.</p>
+	<p>Airport transportation is one of Orlando Tropical Transport's primary services. We offer shuttle transportation to and from Orlando International, Orlando Sanford and Orlando Executive airport. Our shuttles will pick you up from your home, hotel or office and get you to the airport on time and hassle-free.</p>
 </div>
-<div class="service_container services_page_seperator">
-	<div class="services_page_img_container"><img src="images/photos/vehicles/vehicles_taxi.jpg" /></div>
+<div class="services_vehicles_container services_vehicles_page_seperator">
+	<div class="services_vehicles_page_img_container"><img src="images/photos/vehicles/vehicles_taxi.jpg" /></div>
 	<h3>Taxi Service</h3>
 	<ul>
 		<li>24 hour a day availability</li>
-		<li>Professional courteous drivers</li>
+		<li>Courteous drivers</li>
 		<li>Clean, comfortable interior</li>
 	</ul>
 	<p>Orlando Tropical Transport prides itself on top quality taxi services. Our taxis are clean and well maintained. Our drivers are friendly and ready to help you load and unload your things. They can take you anywhere you want to go, usually in under 30 minutes. At our competitive rates it easy to choose Orlando Tropical taxi.</p>
 	
 </div>
 
-<div class="service_container">
-	<div class="services_page_img_container"><img src="images/photos/vehicles/vehicles_sedan.jpg" /></div>
+<div class="services_vehicles_container">
+	<div class="services_vehicles_page_img_container"><img src="images/photos/vehicles/vehicles_sedan.jpg" /></div>
 	<h3>Private Sedan</h3>
 	<ul>
 		<li>24 hour a day availability</li>
@@ -68,8 +69,8 @@
 	
 </div>
 
-<div class="service_container services_page_seperator">
-	<div class="services_page_img_container"><img src="images/photos/vehicles/vehicles_black_limo.jpg" /></div>
+<div class="services_vehicles_container services_vehicles_page_seperator">
+	<div class="services_vehicles_page_img_container"><img src="images/photos/vehicles/vehicles_black_limo.jpg" /></div>
 	<h3>Private Limos</h3>
 	<ul>
 		<li>Vintage or modern Limos</li>
@@ -80,8 +81,8 @@
 A limousine is an elegant ride, and a great way to travel on your special occasion. Limos are perfect for a wedding, bachelor party or prom. Hiring a limousine can add a special element to an anniversary celebration. For any occasion, a limo will get you there in style.</p>
 	
 </div>
-<div class="service_container">
-	<div class="services_page_img_container"><img src="images/photos/vehicles/vehicles_SUV.jpg" /></div>
+<div class="services_vehicles_container">
+	<div class="services_vehicles_page_img_container"><img src="images/photos/vehicles/vehicles_SUV.jpg" /></div>
 	<h3>Cruise Transport</h3>
 	<ul>
 		<li>Eliminates port vehicle fees</li>
@@ -92,8 +93,8 @@ A limousine is an elegant ride, and a great way to travel on your special occasi
 Choose when and where you want to go, and pick your vehicle. Relax and enjoy your journey before the cruise.</p>
 	
 </div>
-<div class="service_container services_page_seperator">
-	<div class="services_page_img_container"><img src="images/photos/vehicles/vehicles_bus.jpg" /></div>
+<div class="services_vehicles_container services_vehicles_page_seperator">
+	<div class="services_vehicles_page_img_container"><img src="images/photos/vehicles/vehicles_bus.jpg" /></div>
 	<h3>Charter Service</h3>
 	<ul>
 		<li>Reliable and comfortable</li>
@@ -120,7 +121,7 @@ Choose when and where you want to go, and pick your vehicle. Relax and enjoy you
 						</div>
 						<div class="service_subsection_secondary divider">
 							<h3>Need a Quote?</h3>
-							<p>Call our friendly customer service staff at <strong>407-855-4600</strong>!</p>
+							<p>Just call our friendly customer service staff waiting to talk to you. <strong>407-855-4600</strong></p>
 						</div>
 					</section>
 
