--- a/destinations.html
+++ b/destinations.html
@@ -7,9 +7,9 @@
 		<link rel="stylesheet" type="text/css" href="css/map.css" />
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.min.js"></script>
 		<script type="text/javascript" src="scripts/map.js"></script>
-		<!--[if lt IE 9]>
-		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
+<!--[if lt IE 9]>
+<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
 	</head>
 	<body>
 		<div class="wrapper">
@@ -158,7 +158,7 @@
 							<h2>Convention Centers</h2>
 							<h3>Orange County Convention Center</h3>
 							<p>
-								The OCCC is known as the primier convention center for Central Florida. It is the second largest convention center in the United States, behind McCormick Place in Chicago, Illinois. The convention center boasts of over 2 million square feet of exhibition space!
+								The OCCC is known as the primier convention center for Central Florida. It is the second largest convention center in the United States, behind McCormick Place in Chicago, Illinois. The convention center boasts over 2 million square feet of exhibition space!
 							</p>
 						</div>
 					</div>
@@ -266,7 +266,7 @@
 				<div class="service_subsection_secondary divider">
 					<h3>Sedan</h3>
 					<p>
-						Sedans can hold up to 4 passengers in comfort and style while traveling to places like the airport, convention center or a hotel.
+						Sedans can hold up to 4 passengers in comfort and style while traveling to places like the airport or convention center.
 					</p>
 				</div>
 				<div class="service_subsection_secondary divider">
