media query changes

--- a/destinations.html
+++ b/destinations.html
@@ -4,7 +4,6 @@
 		<meta charset='utf-8'>
 		<title>Destinations</title>
 		<link rel="stylesheet" href="css/main.css" />
-		<link rel="stylesheet" type="text/css" href="css/map.css" />
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.min.js"></script>
 		<script type="text/javascript" src="scripts/map.js"></script>
 <!--[if lt IE 9]>
@@ -41,6 +40,7 @@
 				</div>
 			</header>
 			<div class="container">
+				<div class="not_available_on_mobile"><h2>Map not available on mobile...</h2></div>
 				<div class="map_container">
 				<div class="map_content">
 					<!--airports-->
