--- a/destinations.html
+++ b/destinations.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset='utf-8'>
 		<title>Destinations</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link rel="stylesheet" href="css/main.css" />
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.min.js"></script>
 		<script type="text/javascript" src="scripts/map.js"></script>
