--- a/services.html
+++ b/services.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset='utf-8'>
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <title>Services</title>
 <link rel="stylesheet" href="css/main.css" />
-<link rel="stylesheet" href="css/services.css" />
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
